# Whisper-Dictation

./: .gitignore  README.md  pyproject.toml
whisper_dictation/: Client.py  DictationDeamon.py  Shortcut.py  WhisperDictator.py  audio.py  cli.py  whipsper_dictation.service  whisper_dictation.service  ydotool_type.py  ydotoold.service
