[tool.poetry]
name = "whisper-dictation"
version = "0.3.0"
description = ""
authors = ["Lumen Young <lumen.young@lumeny.io>"]
readme = "README.md"
packages = [{include = "whisper_dictation"}]

[tool.poetry.dependencies]
python = "^3.10"
pyaudio = "^0.2.13"
click = "^8.1.3"
openai-whisper = "^20230314"

[tool.poetry.scripts]
whisper_dictation = "whisper_dictation.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"